# murdance

./: .env.example  .gitignore  CONTRACT.md  CURSOR_PLAYBOOK.md  CURSOR_PLAYBOOK_RFC004.md  Caddyfile  Dockerfile  Dockerfile.worker  README.md  RFC_003_CONVERSATION_ENGINE_V2 (1).md  RFC_REFERENCE.md  cursorrules  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  результаты_тестирования.md
RFC/: CURSOR_PLAYBOOK_RFC003.md  CURSOR_PLAYBOOK_RFC005.md  CURSOR_PROMPT_RFC006_PHASE1.md  CURSOR_PROMPT_RFC006_PHASE2_AND_PHASE3.md  RFC_002_ARCHITECTURE_MIGRATION.md  RFC_004_ENTITY_RESOLVER_v1.1.md  RFC_005_GROUP_AVAILABILITY.md  RFC_006_RAG_ARCHITECTURE.md  RFC_007_REVIEW.md  RFC_007_v2_POST_LAUNCH_FIXES.md  TOKEN_ECONOMICS_ANALYSIS.md  TOKEN_USAGE_ANALYSIS.md
app/: __init__.py  config.py  main.py  models.py
app/ai/: __init__.py  budget_guard.py  json_parser.py  policy.py  router.py
app/channels/: base.py  dedup.py  filters.py  telegram.py
app/core/: __init__.py  booking_confirm.py  booking_flow.py  cancel_flow.py  cleanup.py  conversation.py  engine.py  fsm.py  guardrails.py  idempotency.py  intent.py  prompt_builder.py  response_generator.py  schedule_flow.py  slot_collector.py  slot_tracker.py  temporal.py
app/integrations/: __init__.py
app/knowledge/: __init__.py  base.py  retriever.py
app/queue/: __init__.py  outbound.py
app/storage/: __init__.py  redis.py  (+3 more)
knowledge/: studio.yaml
scripts/: check_schedule_and_sticker_api.py  check_sticker_list.py  clear_sessions_and_cache.py  test_crm.py
worker/: __init__.py  main.py
(+55 files in other folders)
